# gukjeong

./: .gitignore  CLAUDE.md  README.md  env-example.txt  package-lock.json  package.json  spec-CLAUDE.md  spec-architecture.md  spec-facts.md  turbo.json  vercel.json
.claude/: ARCHITECTURE.md  FACTS.md  MEMORY.md  PROJECT_CONTEXT.md
apps/api/: Dockerfile  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/app/: config.py  dependencies.py  main.py
apps/api/app/db/: database.py  seed.py
apps/api/app/models/: __init__.py  article.py  audit_flag.py  base.py  bill.py  citizen_profile.py  contract.py  credit.py  fiscal.py  glossary.py  legislator.py  news_event.py  president.py  survey.py  user.py
apps/api/app/routers/: __init__.py  audit.py  auth.py  bills.py  budget.py  comments.py  credits.py  legislators.py  local.py  news.py  presidents.py  search.py  survey.py
apps/api/app/schemas/: audit.py  bill.py  fiscal.py  legislator.py  news.py  president.py  survey.py  user.py
apps/api/app/services/: accountability.py  audit_engine.py  claude_service.py  credit_service.py  news_analyzer.py  search_service.py  survey_engine.py
apps/api/etl/: ai_processor.py  audit_patterns.py  consistency_checker.py  news_clustering.py  scheduler.py  tasks.py  transformers.py
apps/api/scrapers/: assembly.py  bai.py  base.py  bigkinds.py  data_go_kr.py  ecos.py  g2b.py  kosis.py  law.py  nec.py  news_rss.py  open_fiscal.py  presidential.py
docs/: api-sources.md  audit-patterns.md  data-ethics-charter.md  deployment.md  media-spectrum.md  spec-ORCHESTRATION.md  (+2 more)
(+241 files in other folders)
