[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gukjeong-api"
version = "0.1.0"
description = "국정투명 백엔드 API"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy[asyncio]>=2.0.25",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "redis>=5.0.0",
    "celery[redis]>=5.3.0",
    "httpx>=0.26.0",
    "beautifulsoup4>=4.12.0",
    "scrapy>=2.11.0",
    "playwright>=1.41.0",
    "anthropic>=0.18.0",
    "sentence-transformers>=2.3.0",
    "scikit-learn>=1.4.0",
    "konlpy>=0.6.0",
    "feedparser>=6.0.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.6",
    "sentry-sdk[fastapi]>=1.40.0",
    "pgvector>=0.2.4",
    "meilisearch>=0.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.26.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
